feat: cambios de backend para integración móvil y recorrido
